Reducing #menu-expansion height to 56px. Seems to fix undesired extra space below menu items on mobile.

--- a/static/css/master_css.css
+++ b/static/css/master_css.css
@@ -146,6 +146,8 @@ a:active {
 
 #menu-expansion {
 	grid-area: menu-expansion;
+
+	height: 56px;
 	
 	background-color: #222222;
 	color: #f9f9f9;
